--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
-		"react-icons": "^5.2.1"
+		"react-icons": "^5.2.1",
+		"sharp": "^0.33.4"
 	},
 	"devDependencies": {
 		"@types/node": "20.5.7",
