--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@nextui-org/listbox": "2.1.25",
 		"@nextui-org/navbar": "2.0.36",
 		"@nextui-org/progress": "^2.0.33",
+		"@nextui-org/react": "^2.4.6",
 		"@nextui-org/snippet": "2.0.41",
 		"@nextui-org/switch": "2.0.33",
 		"@nextui-org/system": "2.2.5",
