--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-icons": "^5.2.1",
+		"react-select": "^5.8.0",
 		"sharp": "^0.33.4"
 	},
 	"devDependencies": {
