--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"intl-messageformat": "^10.5.0",
 		"iron-session": "^8.0.3",
 		"next": "14.2.4",
+		"next-intl": "^3.19.0",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
